--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,23 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  flutter_bloc: ^9.1.1
+  equatable: ^2.0.7
+  get_it: ^9.2.0
+  go_router: ^17.0.0
+  http: ^1.6.0
+  hive: ^4.0.0-dev.2
+  isar_flutter_libs: ^4.0.0-dev.13
+  path_provider: ^2.1.5
+  intl: ^0.20.2
+  uuid: ^4.5.2
+  bloc_test: ^10.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  mocktail: ^1.0.4
 
 flutter:
-
   uses-material-design: true
