--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
 
         steps:
             - name: Checkout code
-              uses: actions/checkout@4
+              uses: actions/checkout@v4
 
             - name: Setup Flutter
               uses: subosito/flutter-action@v2
@@ -41,7 +41,7 @@ jobs:
 
         steps:
             - name: Checkout code
-              uses: actions/checkout@4
+              uses: actions/checkout@v4
 
             - name: Setup Flutter
               uses: subosito/flutter-action@v2
